--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "react-typed": "^2.0.12",
     "styled-components": "^6.1.13",
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "netlify-cli": "^17.36.0",
     "react-router-dom": "^6.26.2"
   }
 }
