--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-react-app",
   "version": "0.1.0",
-  "homepage": " https://parees17.github.io/aiis_website/",
+  "homepage": " https://parees17.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
