--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -1,8 +1,10 @@
 {
   "name": "my-react-app",
   "version": "0.1.0",
+  "homepage": "http://aiisumn.org",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -46,7 +48,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
     "netlify-cli": "^17.36.0",
     "react-router-dom": "^6.26.2"
   }
